--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_account_manage.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_account_manage.xml
@@ -135,7 +135,7 @@
                     android:layout_marginTop="@dimen/dp_22"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     binding:onClickCommand="@{viewModel.modifyPasswordOnClickCommand}">
 
                     <TextView
