update (sdk)  update cocos sdk

--- a/BCX_Wallet/library_res/src/main/res/values/colors.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="color_F5F6FA">#F5F6FA</color>
     <color name="color_E0E0E0">#E0E0E0</color>
     <color name="color_666666">#666666</color>
+    <color name="color_333333">#333333</color>
 </resources>
