--- a/BCX_Wallet/module_login/src/main/res/layout/activity_register.xml
+++ b/BCX_Wallet/module_login/src/main/res/layout/activity_register.xml
@@ -12,192 +12,249 @@
             type="com.cocos.module_login.register.RegisterViewModel" />
     </data>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:visibility="invisible">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:orientation="vertical"
+            tools:ignore="ScrollViewSize">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/dp_20"
-                android:paddingRight="@dimen/dp_20"
-                android:text="@string/module_login_login_title"
-                android:textColor="@color/color_262A33"
-                android:textSize="16sp"
-                binding:onClickCommand="@{viewModel.accountLoginClickCommand}" />
-        </LinearLayout>
+                android:gravity="right"
+                android:visibility="invisible">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_33"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/dp_20"
+                    android:paddingRight="@dimen/dp_20"
+                    android:text="@string/module_login_login_title"
+                    android:textColor="@color/color_262A33"
+                    android:textSize="16sp"
+                    binding:onClickCommand="@{viewModel.accountLoginClickCommand}" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/register_title"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_16"
-                android:text="@string/module_login_account_title"
-                android:textColor="@{viewModel.accountModelTitleColor}"
-                android:textSize="@dimen/sp_22"
-                android:typeface="@{@string/TOTAL_ASSET}"
-                binding:onClickCommand="@{viewModel.accountOnClickCommand}" />
+                android:layout_marginTop="@dimen/dp_33"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="@dimen/dp_16"
-                android:layout_marginStart="@dimen/dp_16"
-                android:background="@color/color_ffd8dbe1" />
+                <TextView
+                    android:id="@+id/register_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_16"
+                    android:text="@string/module_login_account_title"
+                    android:textColor="@{viewModel.accountModelTitleColor}"
+                    android:textSize="@dimen/sp_22"
+                    android:typeface="@{@string/TOTAL_ASSET}"
+                    binding:onClickCommand="@{viewModel.accountOnClickCommand}" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="@dimen/dp_16"
+                    android:layout_marginStart="@dimen/dp_16"
+                    android:background="@color/color_ffd8dbe1" />
+
+                <TextView
+                    android:id="@+id/login_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_20"
+                    android:text="@string/module_login_wallet_title"
+                    android:textColor="@{viewModel.walletModelTitleColor}"
+                    android:textSize="@dimen/sp_22"
+                    android:typeface="@{@string/TOTAL_ASSET}"
+                    binding:onClickCommand="@{viewModel.walletTitleOnClickCommand}" />
+
+            </LinearLayout>
+
+            <com.cocos.library_base.widget.LinearLinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_20"
+                android:layout_marginTop="@dimen/dp_34"
+                android:layout_marginRight="@dimen/dp_20"
+                android:orientation="vertical"
+                br:borderColor="@color/color_ffd8dbe1"
+                br:borderStrokeWidth="6"
+                br:needLeftAndRigtBorder="false"
+                br:needTopBorder="false">
+
+                <EditText
+                    style="@style/editText_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/module_login_username_hint"
+                    android:inputType="text"
+                    android:maxLength="63"
+                    android:paddingTop="@dimen/dp_8"
+                    android:paddingBottom="@dimen/dp_16"
+                    android:text="@={viewModel.accountName}"
+                    android:textSize="@dimen/sp_15"
+                    binding:onFocusChangeCommand="@{viewModel.onFocusChangeCommand}" />
+
+            </com.cocos.library_base.widget.LinearLinearLayout>
 
             <TextView
-                android:id="@+id/login_title"
+                android:id="@+id/account_error_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_20"
-                android:text="@string/module_login_wallet_title"
-                android:textColor="@{viewModel.walletModelTitleColor}"
-                android:textSize="@dimen/sp_22"
-                android:typeface="@{@string/TOTAL_ASSET}"
-                binding:onClickCommand="@{viewModel.walletTitleOnClickCommand}" />
+                android:text="@string/module_login_username_hint"
+                android:textColor="@color/color_F56151"
+                android:textSize="@dimen/sp_12"
+                android:visibility="@{viewModel.accountNameErrorTipVisible}" />
 
+            <com.cocos.library_base.widget.LinearLinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_20"
+                android:layout_marginTop="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_20"
+                android:orientation="vertical"
+                br:borderColor="@color/color_ffd8dbe1"
+                br:borderStrokeWidth="6"
+                br:needLeftAndRigtBorder="false"
+                br:needTopBorder="false">
+
+                <EditText
+                    style="@style/editText_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/module_login_password_hint"
+                    android:inputType="textPassword"
+                    android:paddingTop="@dimen/dp_8"
+                    android:paddingBottom="@dimen/dp_16"
+                    android:text="@={viewModel.password}"
+                    android:textSize="@dimen/sp_15" />
+
+            </com.cocos.library_base.widget.LinearLinearLayout>
+
+
+            <com.cocos.library_base.widget.LinearLinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_20"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_20"
+                android:orientation="vertical"
+                br:borderColor="@color/color_ffd8dbe1"
+                br:borderStrokeWidth="6"
+                br:needLeftAndRigtBorder="false"
+                br:needTopBorder="false">
+
+                <EditText
+                    style="@style/editText_style"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/module_login_confirm_password_hint"
+                    android:inputType="textPassword"
+                    android:paddingTop="@dimen/dp_8"
+                    android:paddingBottom="@dimen/dp_16"
+                    android:text="@={viewModel.confirmPassword}"
+                    android:textSize="@dimen/sp_15" />
+
+            </com.cocos.library_base.widget.LinearLinearLayout>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_50"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_44"
+                android:layout_marginRight="@dimen/dp_15"
+                android:background="@drawable/shape_create_wallet_bg"
+                android:gravity="center"
+                android:text="@string/module_login_btn_register"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_16"
+                binding:onClickCommand="@{viewModel.registerOnClickCommand}" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_16"
+                android:gravity="center_horizontal"
+                android:text="@string/module_login_to_import_wallet"
+                android:textColor="@color/color_4868DC"
+                android:textSize="@dimen/sp_14"
+                binding:onClickCommand="@{viewModel.importOnClickCommand}" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_36"
+                android:layout_marginRight="@dimen/dp_15"
+                android:background="@drawable/register_account_regiex"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_15"
+                android:paddingRight="@dimen/dp_10"
+                android:paddingBottom="@dimen/dp_15">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/register_needs_title"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12"
+                    android:typeface="@{@string/TOTAL_ASSET}"
+                    tools:ignore="SpUsage" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:text="@string/register_needs_text_one"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_12"
+                    tools:ignore="SpUsage" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_6"
+                    android:text="@string/register_needs_text_two"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_12"
+                    tools:ignore="SpUsage" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_6"
+                    android:text="@string/register_needs_text_three"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_12"
+                    tools:ignore="SpUsage" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_15"
+                android:background="@drawable/register_tips_bg"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_10"
+                android:paddingBottom="@dimen/dp_12"
+                android:text="@={viewModel.registerModelTips}"
+                android:textColor="@color/color_F56151"
+                android:textSize="@dimen/sp_12"
+                tools:ignore="SpUsage" />
         </LinearLayout>
-
-        <com.cocos.library_base.widget.LinearLinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_20"
-            android:layout_marginTop="@dimen/dp_34"
-            android:layout_marginRight="@dimen/dp_20"
-            android:orientation="vertical"
-            br:borderColor="@color/color_ffd8dbe1"
-            br:borderStrokeWidth="6"
-            br:needLeftAndRigtBorder="false"
-            br:needTopBorder="false">
-
-            <EditText
-                style="@style/editText_style"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/module_login_username_hint"
-                android:inputType="text"
-                android:maxLength="63"
-                android:paddingTop="@dimen/dp_8"
-                android:paddingBottom="@dimen/dp_16"
-                android:text="@={viewModel.accountName}"
-                android:textSize="@dimen/sp_15"
-                binding:onFocusChangeCommand="@{viewModel.onFocusChangeCommand}" />
-
-        </com.cocos.library_base.widget.LinearLinearLayout>
-
-        <TextView
-            android:id="@+id/account_error_tip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_20"
-            android:text="@string/module_login_username_hint"
-            android:textColor="@color/color_F56151"
-            android:textSize="@dimen/sp_12"
-            android:visibility="@{viewModel.accountNameErrorTipVisible}" />
-
-        <com.cocos.library_base.widget.LinearLinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_20"
-            android:layout_marginTop="@dimen/dp_12"
-            android:layout_marginRight="@dimen/dp_20"
-            android:orientation="vertical"
-            br:borderColor="@color/color_ffd8dbe1"
-            br:borderStrokeWidth="6"
-            br:needLeftAndRigtBorder="false"
-            br:needTopBorder="false">
-
-            <EditText
-                style="@style/editText_style"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/module_login_password_hint"
-                android:inputType="textPassword"
-                android:paddingTop="@dimen/dp_8"
-                android:paddingBottom="@dimen/dp_16"
-                android:text="@={viewModel.password}"
-                android:textSize="@dimen/sp_15" />
-
-        </com.cocos.library_base.widget.LinearLinearLayout>
-
-
-        <com.cocos.library_base.widget.LinearLinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_20"
-            android:layout_marginTop="@dimen/dp_20"
-            android:layout_marginRight="@dimen/dp_20"
-            android:orientation="vertical"
-            br:borderColor="@color/color_ffd8dbe1"
-            br:borderStrokeWidth="6"
-            br:needLeftAndRigtBorder="false"
-            br:needTopBorder="false">
-
-            <EditText
-                style="@style/editText_style"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/module_login_confirm_password_hint"
-                android:inputType="textPassword"
-                android:paddingTop="@dimen/dp_8"
-                android:paddingBottom="@dimen/dp_16"
-                android:text="@={viewModel.confirmPassword}"
-                android:textSize="@dimen/sp_15" />
-
-        </com.cocos.library_base.widget.LinearLinearLayout>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_44"
-            android:layout_marginRight="@dimen/dp_15"
-            android:background="@drawable/shape_create_wallet_bg"
-            android:gravity="center"
-            android:text="@string/module_login_btn_register"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_16"
-            binding:onClickCommand="@{viewModel.registerOnClickCommand}" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_16"
-            android:gravity="center_horizontal"
-            android:text="@string/module_login_to_import_wallet"
-            android:textColor="@color/color_4868DC"
-            android:textSize="@dimen/sp_14"
-            binding:onClickCommand="@{viewModel.importOnClickCommand}" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_36"
-            android:layout_marginRight="@dimen/dp_15"
-            android:background="@drawable/register_tips_bg"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingTop="@dimen/dp_12"
-            android:paddingRight="@dimen/dp_10"
-            android:paddingBottom="@dimen/dp_12"
-            android:text="@={viewModel.registerModelTips}"
-            android:textColor="@color/color_F56151"
-            android:textSize="@dimen/sp_12"
-            tools:ignore="SpUsage" />
-    </LinearLayout>
+    </ScrollView>
 </layout>
