--- a/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_assets.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_assets.xml
@@ -27,23 +27,43 @@
             android:layout_height="@dimen/dp_44"
             android:src="@{viewModel.drawableImg}" />
 
-        <TextView
-            android:id="@+id/asset_nav_title"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_8"
-            android:text="@{viewModel.entity.symbol}"
-            android:textColor="@color/color_282828"
-            android:textSize="@dimen/sp_16" />
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/dp_8"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_3"
-            android:layout_marginBottom="@dimen/dp_6"
-            android:text="@{viewModel.symbolType}"
-            android:textColor="@color/color_4868DC"
-            android:textSize="@dimen/sp_13" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/asset_nav_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.entity.symbol}"
+                    android:textColor="@color/color_282828"
+                    android:textSize="@dimen/sp_16" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_3"
+                    android:layout_marginBottom="@dimen/dp_6"
+                    android:text="@{viewModel.symbolType}"
+                    android:textColor="@color/color_4868DC"
+                    android:textSize="@dimen/sp_13" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.frozenAmount}"
+                android:textColor="@color/color_7B8190"
+                android:textSize="@dimen/sp_14" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
