--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_system_setting.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_system_setting.xml
@@ -134,6 +134,36 @@
                 android:layout_height="@dimen/dp_1"
                 android:background="@color/color_ffe6e6e6" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_60"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                binding:onClickCommand="@{viewModel.coinTypeSettingOnClickCommand}">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="@string/fragment_mine_coin_type_select"
+                    android:textColor="@color/color_262A33"
+                    android:textSize="@dimen/dp_15" />
+
+                <TextView
+                    android:layout_width="@dimen/dp_120"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:text="@={viewModel.coinType}"
+                    android:textColor="@color/color_A5A9B1"
+                    android:textSize="@dimen/sp_15" />
+
+                <ImageView
+                    android:layout_width="@dimen/dp_14"
+                    android:layout_height="@dimen/dp_14"
+                    android:src="@drawable/arrow_right_black" />
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </layout>
