feat （AssetViewModel） add currency type select

--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_asset_overview.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_asset_overview.xml
@@ -84,7 +84,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/asset_text"
+                    android:text="@={viewModel.totalAssetUnitType}"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_14" />
 
