--- a/BCX_Wallet/module_mine/src/main/res/layout/module_mine_item_number_assets.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/module_mine_item_number_assets.xml
@@ -14,8 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_70"
         android:layout_marginLeft="@dimen/dp_15"
-        android:layout_marginBottom="@dimen/dp_12"
         android:layout_marginRight="@dimen/dp_15"
+        android:layout_marginBottom="@dimen/dp_12"
         android:background="@drawable/fragment_mine_number_asset_item_bg"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -29,23 +29,45 @@
             android:layout_height="@dimen/dp_44"
             android:src="@{viewModel.drawableImg}" />
 
-        <TextView
-            android:id="@+id/asset_nav_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_8"
-            android:text="@{viewModel.entity.symbol}"
-            android:textColor="@color/color_282828"
-            android:textSize="@dimen/sp_16" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_3"
-            android:layout_marginBottom="@dimen/dp_6"
-            android:text="@{viewModel.symbolType}"
-            android:textColor="@color/color_4868DC"
-            android:textSize="@dimen/sp_13" />
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/dp_8"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/asset_nav_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.entity.symbol}"
+                    android:textColor="@color/color_282828"
+                    android:textSize="@dimen/sp_16" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_3"
+                    android:layout_marginBottom="@dimen/dp_6"
+                    android:text="@{viewModel.symbolType}"
+                    android:textColor="@color/color_4868DC"
+                    android:textSize="@dimen/sp_13" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.frozenAmount}"
+                android:textColor="@color/color_7B8190"
+                android:textSize="@dimen/sp_14"
+                android:visibility="@{viewModel.frozenAmountViewVisible}" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
