fix (ResetPasswordViewModel)  fix  reset password

--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_reset_password.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_reset_password.xml
@@ -50,42 +50,41 @@
                 android:typeface="@{@string/TOTAL_ASSET}" />
         </RelativeLayout>
 
-        <LinearLayout
+        <com.cocos.library_base.widget.LinearLinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_48"
-            android:layout_marginRight="@dimen/dp_15"
-            android:background="@drawable/shape_key_login_bg"
-            android:orientation="vertical">
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_marginTop="@dimen/dp_28"
+            android:orientation="horizontal"
+            br:borderColor="@color/color_D8DBE1"
+            br:borderStrokeWidth="6"
+            br:needLeftAndRigtBorder="false"
+            br:needTopBorder="false"
+            tools:ignore="RtlHardcoded">
 
-            <com.cocos.library_base.widget.LinearLinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_120"
-                android:layout_marginLeft="@dimen/dp_14"
-                android:layout_marginRight="@dimen/dp_14"
-                android:gravity="top"
-                android:orientation="horizontal"
-                br:borderColor="@color/color_D8DBE1"
-                br:borderStrokeWidth="6"
-                br:needLeftAndRigtBorder="false"
-                br:needTopBorder="false">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:text="@string/module_mine_old_password"
+                android:textColor="@color/color_262A33"
+                android:textSize="@dimen/sp_15" />
 
-                <EditText
-                    android:id="@+id/et_confirm_password"
-                    style="@style/editText_style"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="top"
-                    android:hint="@string/module_login_private_key_hint"
-                    android:paddingTop="@dimen/dp_14"
-                    android:text="@={viewModel.privateKey}" />
+            <EditText
+                style="@style/editText_style"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:hint="@string/module_mine_input_old_password"
+                android:inputType="textPassword"
+                android:maxLength="63"
+                android:paddingLeft="@dimen/dp_14"
+                android:paddingTop="@dimen/dp_22"
+                android:paddingBottom="@dimen/dp_22"
+                android:text="@={viewModel.oldPassword}" />
 
-            </com.cocos.library_base.widget.LinearLinearLayout>
-
-
-        </LinearLayout>
+        </com.cocos.library_base.widget.LinearLinearLayout>
 
         <com.cocos.library_base.widget.LinearLinearLayout
             android:layout_width="match_parent"
@@ -104,7 +103,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:singleLine="true"
-                android:text="@string/module_mine_set_password"
+                android:text="@string/module_mine_new_password"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
 
@@ -113,7 +112,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:hint="@string/module_mine_modify_password_empty"
+                android:hint="@string/module_mine_input_new_password"
                 android:inputType="textPassword"
                 android:maxLength="63"
                 android:paddingLeft="@dimen/dp_14"
@@ -149,7 +148,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:hint="@string/module_mine_reset_confirm_password"
+                android:hint="@string/module_mine_confirm_password"
                 android:inputType="textPassword"
                 android:maxLength="63"
                 android:paddingLeft="@dimen/dp_14"
