feat (library_base)  add Invoke Login page

--- a/BCX_Wallet/library_res/src/main/res/values/colors.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="color_E0E0E0">#E0E0E0</color>
     <color name="color_666666">#666666</color>
     <color name="color_333333">#333333</color>
+    <color name="color_F7F7F7">#F7F7F7</color>
+    <color name="color_9B9B9B">#9B9B9B</color>
+    <color name="color_ff007aff">#ff007aff</color>
+    <color name="color_F3F4F6">#F3F4F6</color>
 </resources>
