--- a/BCX_Wallet/library_base/src/main/res/values/colors.xml
+++ b/BCX_Wallet/library_base/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="color_63D0AB">#63D0AB</color>
     <color name="z_transparent">#00000000</color>
     <color name="color_F6F8FB">#F6F8FB</color>
+    <color name="color_282828">#282828</color>
 </resources>
