feat (InvokeTransferActivity)  add invoke transfer page

--- a/BCX_Wallet/library_base/src/main/res/layout/dialog_transfer_pay_confirm.xml
+++ b/BCX_Wallet/library_base/src/main/res/layout/dialog_transfer_pay_confirm.xml
@@ -6,11 +6,11 @@
 
     <data>
 
-        <import type="com.cocos.module_asset.ui.transfer.OrderConfirmViewModel" />
+        <import type="com.cocos.library_base.component.transfer.OrderConfirmViewModel" />
 
         <variable
             name="viewModel"
-            type="com.cocos.module_asset.ui.transfer.OrderConfirmViewModel" />
+            type="com.cocos.library_base.component.transfer.OrderConfirmViewModel" />
     </data>
 
     <LinearLayout
