--- a/BCX_Wallet/library_base/src/main/res/values/colors.xml
+++ b/BCX_Wallet/library_base/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="z_transparent">#00000000</color>
     <color name="color_F6F8FB">#F6F8FB</color>
     <color name="color_282828">#282828</color>
+    <color name="color_f6f6f6">#F6F6F6</color>
+    <color name="color_ebebeb">#ebebeb</color>
 </resources>
