--- a/BCX_Wallet/module_asset/src/main/res/layout/activity_record_detail.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/activity_record_detail.xml
@@ -50,7 +50,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -126,10 +126,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:ellipsize="middle"
-                                android:text="@={viewModel.senderAccount}"
-                                android:textColor="@color/color_262A33"
                                 android:maxWidth="@dimen/dp_140"
                                 android:singleLine="true"
+                                android:text="@={viewModel.senderAccount}"
+                                android:textColor="@color/color_262A33"
                                 android:textSize="@dimen/sp_14" />
 
                             <ImageView
@@ -347,10 +347,20 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/dp_30"
                     android:src="@drawable/transfer_success_icon" />
+
+
             </RelativeLayout>
 
         </ScrollView>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/check_transfer_info_in_browser"
+            android:textColor="@color/color_4868DC"
+            binding:onClickCommand="@{viewModel.onSquareHeightClick}" />
     </LinearLayout>
 
 </layout>
